# Alpha-AI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Justfile  README.md  docker-compose.yml  mcp_config.example.json  mcp_config.json.backup  models.json  pyproject.toml
docs/: mcp_configuration.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css
src/alpha_ai/: __init__.py  __main__.py  agent.py  cli.py  conversation.py  database.py  mcp_config.py  model_discovery.py  models.py  server.py  settings.py
src/alpha_ai/static/: index.html
src/alpha_ai_mcp/: __init__.py  __main__.py
src/alpha_ai_tui/: __init__.py
