[project]
name = "alpha-ai"
version = "1.0.0"
description = "Provider-agnostic AI agent server with REST API, MCP bridge, and terminal UI"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic-ai>=0.0.45",
    "sqlalchemy>=2.0.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.20",
    "fastmcp>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
alpha-ai = "alpha_ai.__main__:main"
alpha-cli = "alpha_ai.cli:cli"
alpha-mcp = "alpha_ai_mcp.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
